--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link href="https://fonts.googleapis.com/css?family=Fontdiner+Swanky" rel="stylesheet">
+		<link
+			href="https://fonts.googleapis.com/css?family=Fontdiner+Swanky"
+			rel="stylesheet"
+		/>
 		<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
 		<meta
 			name="viewport"
@@ -17,7 +20,7 @@
 		/>
 
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-		<title>React App</title>
+		<title>CleanLift</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
