--- a/public/landingpage/index.html
+++ b/public/landingpage/index.html
@@ -10,13 +10,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta
 			name="description"
-			content="Astra is a colofull app landing page template"
+			content="CleanLift is an application to keep you motivated, and on schedule to work out."
 		/>
 		<meta name="author" content="TeamXcel" />
 
-		<title>Astra | App Landing Page</title>
+		<title>CleanLift</title>
 
-		<link rel="shortcut icon" type="image/x-icon" href="./img/favicon.png" />
+		<link rel="shortcut icon" type="image/x-icon" href="./img/favicon.ico" />
 
 		<!-- Font Awesome CSS -->
 		<link rel="stylesheet" href="./css/font-awesome.min.css" />
@@ -86,7 +86,7 @@
 									<a data-scroll class="nav-link" href="#pricing">Pricing</a>
 								</li>
 								<li>
-									<a data-scroll class="nav-link" href="#download">Download</a>
+									<a data-scroll class="nav-link" href="/login">Login</a>
 								</li>
 							</ul>
 						</div>
@@ -101,10 +101,12 @@
 				<div class="hero-inner text-center">
 					<div class="hero-content">
 						<h1>
-							Make your app <br />
-							business easy with Astra
+							Make your life better <br />
+							with CleanLift
 						</h1>
-						<p>Astra is better way to promote your startup mobile app.</p>
+						<p>
+							CleanLift is a way to keep you on track to hit your Workout goals.
+						</p>
 						<div class="hero-btn">
 							<a href="#" class="download-btn"
 								><img src="./img/appstore.png" alt="btn"
@@ -814,7 +816,7 @@
 
 		<footer class="footer-section align-center">
 			<div class="container">
-				<p>&copy; 2018 Astra Powered by TeamXcel</p>
+				<p>&copy; 2019 CleanLift</p>
 			</div>
 		</footer>
 		<!-- /.footer_section -->
