Added Logo for Landing page Navigation.

--- a/public/landingpage/index.html
+++ b/public/landingpage/index.html
@@ -61,7 +61,7 @@
 			<div class="container">
 				<nav class="navbar">
 					<a href="#" class="navbar-brand"
-						><img src="./img/logo.png" alt="Astra"
+						><img src="./img/SecondaryLogo.png" alt="Astra"
 					/></a>
 					<div class="d-flex menu-wrap">
 						<div id="navmenu" class="mainmenu">
