changes text and development team on landing page.

--- a/public/landingpage/index.html
+++ b/public/landingpage/index.html
@@ -236,9 +236,9 @@
 					>
 						<div class="how-content text-center">
 							<i class="icon-anchor"></i>
-							<h3>Connect Device</h3>
+							<h3>Connect With Us</h3>
 							<p>
-								Astra is better way to promote your <br />startup mobile app.
+								CleanLift is better way to promote yourself <br />to a healthy lifestyle.
 							</p>
 						</div>
 						<div class="arrow"></div>
@@ -251,9 +251,9 @@
 					>
 						<div class="how-content text-center">
 							<i class="icon-adjustments"></i>
-							<h3>Configure It</h3>
+							<h3>Configure Your Workouts</h3>
 							<p>
-								Astra is better way to promote your <br />startup mobile app.
+								CleanLift allows for a simple user <br />interface in a simple mobile app.
 							</p>
 						</div>
 						<div class="arrow"></div>
@@ -268,7 +268,7 @@
 							<i class="icon-happy"></i>
 							<h3>Yay! Done</h3>
 							<p>
-								Astra is better way to promote your <br />startup mobile app.
+								Now that you're all set up <br />let's start working.
 							</p>
 						</div>
 					</div>
@@ -389,8 +389,8 @@
 								<img src="./img/team-1.jpg" alt="./img" />
 							</div>
 							<div class="team-content">
-								<h3>Michel Brown</h3>
-								<span>Designer</span>
+								<h3>Michel Ney</h3>
+								<span>Developer</span>
 							</div>
 						</div>
 					</div>
@@ -405,7 +405,7 @@
 								<img src="./img/team-2.jpg" alt="./img" />
 							</div>
 							<div class="team-content">
-								<h3>Angelina Rose</h3>
+								<h3>Alvin Frierson</h3>
 								<span>Javascript</span>
 							</div>
 						</div>
@@ -421,7 +421,7 @@
 								<img src="./img/team-3.jpg" alt="./img" />
 							</div>
 							<div class="team-content">
-								<h3>Jonathan Smith</h3>
+								<h3>Tim Zulf</h3>
 								<span>Developer</span>
 							</div>
 						</div>
@@ -437,8 +437,8 @@
 								<img src="./img/team-4.jpg" alt="./img" />
 							</div>
 							<div class="team-content">
-								<h3>Veera Pamela</h3>
-								<span>Marketer</span>
+								<h3>Ray Lomeli</h3>
+								<span>Developer</span>
 							</div>
 						</div>
 					</div>
@@ -467,7 +467,7 @@
 							<img src="./img/team-1.jpg" alt="thumb" />
 						</div>
 						<div class="review-content">
-							<h3>Michel Brown</h3>
+							<h3>Michel Ney</h3>
 							<ul class="rattings">
 								<li><i class="fa fa-star"></i></li>
 								<li><i class="fa fa-star"></i></li>
@@ -490,7 +490,7 @@
 							<img src="./img/team-2.jpg" alt="thumb" />
 						</div>
 						<div class="review-content">
-							<h3>Angelina Rose</h3>
+							<h3>Alvin Frierson</h3>
 							<ul class="rattings">
 								<li><i class="fa fa-star"></i></li>
 								<li><i class="fa fa-star"></i></li>
@@ -513,7 +513,7 @@
 							<img src="./img/team-3.jpg" alt="thumb" />
 						</div>
 						<div class="review-content">
-							<h3>Jonathan Smith</h3>
+							<h3>Tim Zulf</h3>
 							<ul class="rattings">
 								<li><i class="fa fa-star"></i></li>
 								<li><i class="fa fa-star"></i></li>
