Commented out unused sections of landing page.

--- a/public/landingpage/index.html
+++ b/public/landingpage/index.html
@@ -80,9 +80,6 @@
 									>
 								</li>
 								<li>
-									<a data-scroll class="nav-link" href="#reviews">Reviews</a>
-								</li>
-								<li>
 									<a data-scroll class="nav-link" href="#pricing">Pricing</a>
 								</li>
 								<li>
@@ -238,7 +235,8 @@
 							<i class="icon-anchor"></i>
 							<h3>Connect With Us</h3>
 							<p>
-								CleanLift is better way to promote yourself <br />to a healthy lifestyle.
+								CleanLift is better way to promote yourself <br />to a healthy
+								lifestyle.
 							</p>
 						</div>
 						<div class="arrow"></div>
@@ -253,7 +251,8 @@
 							<i class="icon-adjustments"></i>
 							<h3>Configure Your Workouts</h3>
 							<p>
-								CleanLift allows for a simple user <br />interface in a simple mobile app.
+								CleanLift allows for a simple user <br />interface in a simple
+								mobile app.
 							</p>
 						</div>
 						<div class="arrow"></div>
@@ -267,9 +266,7 @@
 						<div class="how-content text-center">
 							<i class="icon-happy"></i>
 							<h3>Yay! Done</h3>
-							<p>
-								Now that you're all set up <br />let's start working.
-							</p>
+							<p>Now that you're all set up <br />let's start working.</p>
 						</div>
 					</div>
 					<!-- Item-3 -->
@@ -389,7 +386,7 @@
 								<img src="./img/team-1.jpg" alt="./img" />
 							</div>
 							<div class="team-content">
-								<h3>Michel Ney</h3>
+								<h3>Michael Ney</h3>
 								<span>Developer</span>
 							</div>
 						</div>
@@ -448,7 +445,7 @@
 		</section>
 		<!-- Team Section -->
 
-		<section id="reviews" class="review-section bg-gradiant padding">
+		<!-- <section id="reviews" class="review-section bg-gradiant padding">
 			<div class="container">
 				<div
 					class="section-heading mb-60 text-center wow fadeInUp"
@@ -484,7 +481,6 @@
 							</div>
 						</div>
 					</div>
-					<!-- Reviews-1 -->
 					<div class="review-item">
 						<div class="review-thumb">
 							<img src="./img/team-2.jpg" alt="thumb" />
@@ -507,7 +503,6 @@
 							</div>
 						</div>
 					</div>
-					<!-- Reviews-2 -->
 					<div class="review-item">
 						<div class="review-thumb">
 							<img src="./img/team-3.jpg" alt="thumb" />
@@ -530,11 +525,9 @@
 							</div>
 						</div>
 					</div>
-					<!-- Reviews-3 -->
 				</div>
 			</div>
-		</section>
-		<!-- Reviews Section -->
+		</section> Reviews Section -->
 
 		<section id="pricing" class="pricing-section bd-bottom bg-grey padding">
 			<div class="container">
@@ -618,7 +611,7 @@
 		</section>
 		<!-- Pricing Section -->
 
-		<section id="blog" class="blog-section padding">
+		<!-- <section id="blog" class="blog-section padding">
 			<div class="container">
 				<div
 					class="section-heading mb-60 text-center wow fadeInUp"
@@ -661,7 +654,6 @@
 							</div>
 						</div>
 					</div>
-					<!-- Post-1 -->
 					<div
 						class="col-md-4 col-sm-6 xs-padding  wow fadeInUp"
 						data-wow-delay="200ms"
@@ -691,7 +683,6 @@
 							</div>
 						</div>
 					</div>
-					<!-- Post-1 -->
 					<div
 						class="col-md-4 col-sm-6 xs-padding  wow fadeInUp"
 						data-wow-delay="400ms"
@@ -721,10 +712,9 @@
 							</div>
 						</div>
 					</div>
-					<!-- Post-1 -->
 				</div>
 			</div>
-		</section>
+		</section> -->
 		<!-- Blog Section -->
 
 		<section id="download" class="download-section padding">
@@ -735,7 +725,7 @@
 						data-wow-delay="0ms"
 						data-wow-duration="1000ms"
 					>
-						Download Astra Today
+						Download CleanLift Today
 					</h2>
 					<p
 						class="wow fadeInUp"
@@ -792,7 +782,7 @@
 					</form>
 				</div>
 				<div class="clearfix"></div>
-				<ul class="social-share text-center">
+				<!-- <ul class="social-share text-center">
 					<li>
 						<a href="#"><i class="fa fa-facebook"></i></a>
 					</li>
@@ -808,7 +798,7 @@
 					<li>
 						<a href="#"><i class="fa fa-pinterest"></i></a>
 					</li>
-				</ul>
+				</ul> -->
 				<!-- /.social_link -->
 			</div>
 		</section>
