--- a/public/landingpage/index.html
+++ b/public/landingpage/index.html
@@ -300,56 +300,35 @@
 						<div class="swiper-slide">
 							<img
 								class="w-100"
-								src="./img/screenshot-1.jpg"
+								src="./img/screen1.png"
 								alt="screenshot"
 							/>
 						</div>
 						<div class="swiper-slide">
 							<img
 								class="w-100"
-								src="./img/screenshot-2.jpg"
+								src="./img/screen2.png"
 								alt="screenshot"
 							/>
 						</div>
 						<div class="swiper-slide">
 							<img
 								class="w-100"
-								src="./img/screenshot-3.jpg"
+								src="./img/screen3.png"
 								alt="screenshot"
 							/>
 						</div>
 						<div class="swiper-slide">
 							<img
 								class="w-100"
-								src="./img/screenshot-4.jpg"
+								src="./img/screen4.png"
 								alt="screenshot"
 							/>
 						</div>
 						<div class="swiper-slide">
 							<img
 								class="w-100"
-								src="./img/screenshot-5.jpg"
-								alt="screenshot"
-							/>
-						</div>
-						<div class="swiper-slide">
-							<img
-								class="w-100"
-								src="./img/screenshot-6.jpg"
-								alt="screenshot"
-							/>
-						</div>
-						<div class="swiper-slide">
-							<img
-								class="w-100"
-								src="./img/screenshot-7.jpg"
-								alt="screenshot"
-							/>
-						</div>
-						<div class="swiper-slide">
-							<img
-								class="w-100"
-								src="./img/screenshot-8.jpg"
+								src="./img/screen5.png"
 								alt="screenshot"
 							/>
 						</div>
