Added Get Started button to replace Google Play/Apple Store download buttons for application. on landing page. Removed 'Welcome To CleanLift' navigation text when not logged in on React App.

--- a/public/landingpage/index.html
+++ b/public/landingpage/index.html
@@ -105,12 +105,9 @@
 							CleanLift is a way to keep you on track to hit your Workout goals.
 						</p>
 						<div class="hero-btn">
-							<a href="#" class="download-btn"
-								><img src="./img/appstore.png" alt="btn"
-							/></a>
-							<a href="#" class="download-btn"
-								><img src="./img/playstore.png" alt="btn"
-							/></a>
+							<a href="/login">
+								<button class="get-started-btn pricing-btn">Get Started</button>
+							</a>
 						</div>
 					</div>
 				</div>
@@ -298,39 +295,19 @@
 					</div>
 					<div class="swiper-wrapper">
 						<div class="swiper-slide">
-							<img
-								class="w-100"
-								src="./img/screen1.png"
-								alt="screenshot"
-							/>
+							<img class="w-100" src="./img/screen1.png" alt="screenshot" />
 						</div>
 						<div class="swiper-slide">
-							<img
-								class="w-100"
-								src="./img/screen2.png"
-								alt="screenshot"
-							/>
+							<img class="w-100" src="./img/screen2.png" alt="screenshot" />
 						</div>
 						<div class="swiper-slide">
-							<img
-								class="w-100"
-								src="./img/screen3.png"
-								alt="screenshot"
-							/>
+							<img class="w-100" src="./img/screen3.png" alt="screenshot" />
 						</div>
 						<div class="swiper-slide">
-							<img
-								class="w-100"
-								src="./img/screen4.png"
-								alt="screenshot"
-							/>
+							<img class="w-100" src="./img/screen4.png" alt="screenshot" />
 						</div>
 						<div class="swiper-slide">
-							<img
-								class="w-100"
-								src="./img/screen5.png"
-								alt="screenshot"
-							/>
+							<img class="w-100" src="./img/screen5.png" alt="screenshot" />
 						</div>
 					</div>
 					<!-- Carousel Arrows -->
@@ -704,7 +681,7 @@
 						data-wow-delay="0ms"
 						data-wow-duration="1000ms"
 					>
-						Download CleanLift Today
+						Get Started With CleanLift Today
 					</h2>
 					<p
 						class="wow fadeInUp"
@@ -719,12 +696,9 @@
 						data-wow-delay="400ms"
 						data-wow-duration="1000ms"
 					>
-						<a href="#" class="download-btn"
-							><img src="./img/appstore.png" alt="btn"
-						/></a>
-						<a href="#" class="download-btn"
-							><img src="./img/playstore.png" alt="btn"
-						/></a>
+						<a href="/login">
+							<button class="get-started-btn pricing-btn">Get Started</button>
+						</a>
 					</div>
 				</div>
 			</div>
