--- a/public/landingpage/index.html
+++ b/public/landingpage/index.html
@@ -174,7 +174,7 @@
 						<!-- Item-2 -->
 					</div>
 				</div>
-				<div class="row sponsor-wrap mt-30 text-center">
+				<!-- <div class="row sponsor-wrap mt-30 text-center">
 					<div class="col-md-10 offset-md-1">
 						<ul class="sponsors">
 							<li><img src="./img/sponsor-1.png" alt="sponsor" /></li>
@@ -183,7 +183,7 @@
 							<li><img src="./img/sponsor-4.png" alt="sponsor" /></li>
 						</ul>
 					</div>
-				</div>
+				</div> -->
 			</div>
 		</section>
 		<!-- Feature Section -->
