Updated Pricing section to have relevant information to our application.

--- a/public/landingpage/index.html
+++ b/public/landingpage/index.html
@@ -500,48 +500,48 @@
 				</div>
 				<div class="row pricing-wrap">
 					<div
-						class="col-md-4 col-sm-6 sm-padding wow fadeInUp"
+						class="col-md-6 col-sm-6 sm-padding wow fadeInUp"
 						data-wow-delay="0ms"
 						data-wow-duration="1000ms"
 					>
-						<div class="pricing-box text-center">
+						<div class="pricing-box middle text-center">
 							<div class="pricing-head">
 								<i class="icon-layers"></i>
-								<h3>Basic</h3>
-								<h2>$39<span>month</span></h2>
+								<h3>Starting</h3>
+								<h2>Free</h2>
 							</div>
 							<ul class="pricing-info">
-								<li>6 GB storage</li>
-								<li>Fast Brandwidht</li>
-								<li>Responsive Design</li>
-								<li>24/7 Support</li>
+								<li>Up To 3 Workout Templates Saved</li>
+								<li>Unlimited Scheduled Workouts</li>
+								<li>Unlimited Workout Sessions</li>
+								<li>Record your Body Metrics and Measurements</li>
 							</ul>
-							<a href="#" class="pricing-btn">Signup Now</a>
+							<a href="/login" class="pricing-btn">Signup Now</a>
 						</div>
 					</div>
 					<!-- Pricing 1 -->
 					<div
-						class="col-md-4 col-sm-6 sm-padding wow fadeInUp"
+						class="col-md-6 col-sm-6 sm-padding wow fadeInUp"
 						data-wow-delay="200ms"
 						data-wow-duration="1000ms"
 					>
 						<div class="pricing-box middle text-center">
 							<div class="pricing-head">
-								<i class="icon-strategy"></i>
+								<i class="icon-genius"></i>
 								<h3>Premium</h3>
-								<h2>$59<span>month</span></h2>
+								<h2>$9<span>One Time</span></h2>
 							</div>
 							<ul class="pricing-info">
-								<li>6 GB storage</li>
-								<li>Fast Brandwidht</li>
-								<li>Responsive Design</li>
-								<li>24/7 Support</li>
+								<li>Unlimited Workout Templates Saved</li>
+								<li>Unlimited Scheduled Workouts</li>
+								<li>Unlimited Workout Sessions</li>
+								<li>Record your Body Metrics and Measurements</li>
 							</ul>
-							<a href="#" class="pricing-btn">Signup Now</a>
+							<a href="/login" class="pricing-btn">Signup Now</a>
 						</div>
 					</div>
 					<!-- Pricing 2 -->
-					<div
+					<!-- <div
 						class="col-md-4 col-sm-6 sm-padding wow fadeInUp"
 						data-wow-delay="400ms"
 						data-wow-duration="1000ms"
@@ -560,7 +560,7 @@
 							</ul>
 							<a href="#" class="pricing-btn">Signup Now</a>
 						</div>
-					</div>
+					</div> -->
 					<!-- Pricing 3 -->
 				</div>
 			</div>
