--- a/public/landingpage/index.html
+++ b/public/landingpage/index.html
@@ -284,8 +284,8 @@
 				>
 					<h2>Screenshots</h2>
 					<p>
-						Lorem Ipsum is simply dummy text of the printing and typesetting
-						industry. <br />It has survived not only five centuries.
+						Checkout our application. <br />From desktop to mobile, your workout
+						experience will be our priority.
 					</p>
 				</div>
 				<div class="swiper-container">
@@ -327,8 +327,8 @@
 				>
 					<h2>Developers</h2>
 					<p>
-						Lorem Ipsum is simply dummy text of the printing and typesetting
-						industry. <br />It has survived not only five centuries.
+						Here is the CleanLift team! <br />Everyone involved worked on the
+						whole product.
 					</p>
 				</div>
 				<div class="row">
@@ -359,7 +359,7 @@
 							</div>
 							<div class="team-content">
 								<h3>Alvin Frierson</h3>
-								<span>Javascript</span>
+								<span>Developer</span>
 							</div>
 						</div>
 					</div>
@@ -494,8 +494,8 @@
 				>
 					<h2>Plans & Pricing</h2>
 					<p>
-						Lorem Ipsum is simply dummy text of the printing and typesetting
-						industry. <br />It has survived not only five centuries.
+						CleanLift has two plans. The free tier, and the premium tier.
+						<br />Start free, and upgrade when you want!
 					</p>
 				</div>
 				<div class="row pricing-wrap">
