Updated Get Started lorem ipsum sub header.

--- a/public/landingpage/index.html
+++ b/public/landingpage/index.html
@@ -688,8 +688,7 @@
 						data-wow-delay="200ms"
 						data-wow-duration="1000ms"
 					>
-						Lorem Ipsum is simply dummy text of the printing and typesetting
-						industry. <br />It has survived not only five centuries.
+						Your new life is only one step away. <br />Do you have what it takes?
 					</p>
 					<div
 						class="hero-btn wow fadeInUp"
