Replaced image placeholders with actual images. Updated lorem ipsum text.

--- a/public/landingpage/index.html
+++ b/public/landingpage/index.html
@@ -126,10 +126,9 @@
 							data-wow-duration="1000ms"
 						>
 							<div class="icon"><i class="icon-layers"></i></div>
-							<h3>Great Interface</h3>
+							<h3>Easily Schedule Workouts</h3>
 							<p>
-								Lorem Ipsum is simply text of the printing and typesetting
-								industry.It has centuries.
+								Use our Calendar to easily plan your workouts.
 							</p>
 						</div>
 						<div
@@ -138,10 +137,10 @@
 							data-wow-duration="1000ms"
 						>
 							<div class="icon"><i class="icon-heart"></i></div>
-							<h3>Made With Love</h3>
+							<h3>Plan on the go or at home</h3>
 							<p>
-								Lorem Ipsum is simply text of the printing and typesetting
-								industry.It has centuries.
+								You can schedule your workouts from home on the computer, or on
+								the go from your phone.
 							</p>
 						</div>
 						<!-- Item-2 -->
@@ -153,10 +152,10 @@
 							data-wow-duration="1000ms"
 						>
 							<div class="icon"><i class="icon-adjustments"></i></div>
-							<h3>Easy To Custimize</h3>
+							<h3>Save Time</h3>
 							<p>
-								Lorem Ipsum is simply text of the printing and typesetting
-								industry.It has centuries.
+								Save workouts you will repeat, and quickly reschedule them for
+								anytime with the click of a button.
 							</p>
 						</div>
 						<div
@@ -165,10 +164,9 @@
 							data-wow-duration="1000ms"
 						>
 							<div class="icon"><i class="icon-clock"></i></div>
-							<h3>24/7 Support</h3>
+							<h3>Track Your Progress</h3>
 							<p>
-								Lorem Ipsum is simply text of the printing and typesetting
-								industry.It has centuries.
+								Keep track of your body metrics and measurements overtime from the start of your CleanLift experience.
 							</p>
 						</div>
 						<!-- Item-2 -->
@@ -188,7 +186,7 @@
 		</section>
 		<!-- Feature Section -->
 
-		<section class="content-section bg-grey bd-bottom padding">
+		<!-- <section class="content-section bg-grey bd-bottom padding">
 			<div class="container">
 				<div class="row content-wrap">
 					<div
@@ -217,7 +215,7 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</section> -->
 		<!-- Content Section -->
 
 		<section id="works" class="how-it-works-section bd-bottom padding">
@@ -317,89 +315,6 @@
 			</div>
 		</section>
 		<!-- Screenshots Section -->
-
-		<section id="team" class="team-section bd-bottom padding">
-			<div class="container">
-				<div
-					class="section-heading mb-60 text-center wow fadeInUp"
-					data-wow-delay="0ms"
-					data-wow-duration="1000ms"
-				>
-					<h2>Developers</h2>
-					<p>
-						Here is the CleanLift team! <br />Everyone involved worked on the
-						whole product.
-					</p>
-				</div>
-				<div class="row">
-					<div
-						class="col-md-3 col-sm-6 xs-padding wow fadeInUp"
-						data-wow-delay="0ms"
-						data-wow-duration="1000ms"
-					>
-						<div class="team-box text-center">
-							<div class="team-thumb">
-								<img src="./img/team-1.jpg" alt="./img" />
-							</div>
-							<div class="team-content">
-								<h3>Michael Ney</h3>
-								<span>Developer</span>
-							</div>
-						</div>
-					</div>
-					<!-- Team-1 -->
-					<div
-						class="col-md-3 col-sm-6 xs-padding wow fadeInUp"
-						data-wow-delay="200ms"
-						data-wow-duration="1000ms"
-					>
-						<div class="team-box text-center">
-							<div class="team-thumb">
-								<img src="./img/team-2.jpg" alt="./img" />
-							</div>
-							<div class="team-content">
-								<h3>Alvin Frierson</h3>
-								<span>Developer</span>
-							</div>
-						</div>
-					</div>
-					<!-- Team-1 -->
-					<div
-						class="col-md-3 col-sm-6 xs-padding wow fadeInUp"
-						data-wow-delay="400ms"
-						data-wow-duration="1000ms"
-					>
-						<div class="team-box text-center">
-							<div class="team-thumb">
-								<img src="./img/team-3.jpg" alt="./img" />
-							</div>
-							<div class="team-content">
-								<h3>Tim Zulf</h3>
-								<span>Developer</span>
-							</div>
-						</div>
-					</div>
-					<!-- Team-3 -->
-					<div
-						class="col-md-3 col-sm-6 xs-padding wow fadeInUp"
-						data-wow-delay="500ms"
-						data-wow-duration="1000ms"
-					>
-						<div class="team-box text-center">
-							<div class="team-thumb">
-								<img src="./img/team-4.jpg" alt="./img" />
-							</div>
-							<div class="team-content">
-								<h3>Ray Lomeli</h3>
-								<span>Developer</span>
-							</div>
-						</div>
-					</div>
-					<!-- Team-4 -->
-				</div>
-			</div>
-		</section>
-		<!-- Team Section -->
 
 		<!-- <section id="reviews" class="review-section bg-gradiant padding">
 			<div class="container">
@@ -565,6 +480,89 @@
 				</div>
 			</div>
 		</section>
+
+		<section id="team" class="team-section bd-bottom padding">
+			<div class="container">
+				<div
+					class="section-heading mb-60 text-center wow fadeInUp"
+					data-wow-delay="0ms"
+					data-wow-duration="1000ms"
+				>
+					<h2>Developers</h2>
+					<p>
+						Here is the CleanLift team! <br />Everyone involved worked on the
+						whole product.
+					</p>
+				</div>
+				<div class="row">
+					<div
+						class="col-md-3 col-sm-6 xs-padding wow fadeInUp"
+						data-wow-delay="0ms"
+						data-wow-duration="1000ms"
+					>
+						<div class="team-box text-center">
+							<div class="team-thumb">
+								<img src="./img/team-1.jpg" alt="./img" />
+							</div>
+							<div class="team-content">
+								<h3>Michael Ney</h3>
+								<span>Developer</span>
+							</div>
+						</div>
+					</div>
+					<!-- Team-1 -->
+					<div
+						class="col-md-3 col-sm-6 xs-padding wow fadeInUp"
+						data-wow-delay="200ms"
+						data-wow-duration="1000ms"
+					>
+						<div class="team-box text-center">
+							<div class="team-thumb">
+								<img src="./img/team-2.jpg" alt="./img" />
+							</div>
+							<div class="team-content">
+								<h3>Alvin Frierson</h3>
+								<span>Developer</span>
+							</div>
+						</div>
+					</div>
+					<!-- Team-1 -->
+					<div
+						class="col-md-3 col-sm-6 xs-padding wow fadeInUp"
+						data-wow-delay="400ms"
+						data-wow-duration="1000ms"
+					>
+						<div class="team-box text-center">
+							<div class="team-thumb">
+								<img src="./img/team-3.jpg" alt="./img" />
+							</div>
+							<div class="team-content">
+								<h3>Tim Zulf</h3>
+								<span>Developer</span>
+							</div>
+						</div>
+					</div>
+					<!-- Team-3 -->
+					<div
+						class="col-md-3 col-sm-6 xs-padding wow fadeInUp"
+						data-wow-delay="500ms"
+						data-wow-duration="1000ms"
+					>
+						<div class="team-box text-center">
+							<div class="team-thumb">
+								<img src="./img/team-4.jpg" alt="./img" />
+							</div>
+							<div class="team-content">
+								<h3>Ray Lomeli</h3>
+								<span>Developer</span>
+							</div>
+						</div>
+					</div>
+					<!-- Team-4 -->
+				</div>
+			</div>
+		</section>
+		<!-- Team Section -->
 		<!-- Pricing Section -->
 
 		<!-- <section id="blog" class="blog-section padding">
@@ -673,7 +671,7 @@
 		</section> -->
 		<!-- Blog Section -->
 
-		<section id="download" class="download-section padding">
+		<!-- <section id="download" class="download-section padding">
 			<div class="container">
 				<div class="download-content text-center">
 					<h2
@@ -688,7 +686,8 @@
 						data-wow-delay="200ms"
 						data-wow-duration="1000ms"
 					>
-						Your new life is only one step away. <br />Do you have what it takes?
+						Your new life is only one step away. <br />Do you have what it
+						takes?
 					</p>
 					<div
 						class="hero-btn wow fadeInUp"
@@ -701,10 +700,10 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</section> -->
 		<!-- Download Section -->
 
-		<section id="subscribe" class="subscribe-section">
+		<!-- <section id="subscribe" class="subscribe-section">
 			<div class="container">
 				<div
 					class="section-heading mb-40 text-center wow fadeInUp"
@@ -734,7 +733,7 @@
 					</form>
 				</div>
 				<div class="clearfix"></div>
-				<!-- <ul class="social-share text-center">
+				 <ul class="social-share text-center">
 					<li>
 						<a href="#"><i class="fa fa-facebook"></i></a>
 					</li>
@@ -750,11 +749,9 @@
 					<li>
 						<a href="#"><i class="fa fa-pinterest"></i></a>
 					</li>
-				</ul> -->
-				<!-- /.social_link -->
+				</ul>
 			</div>
-		</section>
-		<!-- Subscribe Section -->
+		</section> -->
 
 		<footer class="footer-section align-center">
 			<div class="container">
