added development team photos dynamically connected to our GitHub accounts.

--- a/public/landingpage/index.html
+++ b/public/landingpage/index.html
@@ -502,7 +502,7 @@
 					>
 						<div class="team-box text-center">
 							<div class="team-thumb">
-								<img src="./img/team-1.jpg" alt="./img" />
+								<img src="https://avatars1.githubusercontent.com/u/25756024?s=460&v=4" alt="./img" />
 							</div>
 							<div class="team-content">
 								<h3>Michael Ney</h3>
@@ -518,7 +518,7 @@
 					>
 						<div class="team-box text-center">
 							<div class="team-thumb">
-								<img src="./img/team-2.jpg" alt="./img" />
+								<img src="https://avatars3.githubusercontent.com/u/44757584?s=460&v=4" alt="./img" />
 							</div>
 							<div class="team-content">
 								<h3>Alvin Frierson</h3>
@@ -534,7 +534,7 @@
 					>
 						<div class="team-box text-center">
 							<div class="team-thumb">
-								<img src="./img/team-3.jpg" alt="./img" />
+								<img src="https://avatars3.githubusercontent.com/u/6799924?s=460&v=4" alt="./img" />
 							</div>
 							<div class="team-content">
 								<h3>Tim Zulf</h3>
@@ -550,7 +550,7 @@
 					>
 						<div class="team-box text-center">
 							<div class="team-thumb">
-								<img src="./img/team-4.jpg" alt="./img" />
+								<img src="https://avatars3.githubusercontent.com/u/35145470?s=460&v=4" alt="./img" />
 							</div>
 							<div class="team-content">
 								<h3>Ray Lomeli</h3>
