--- a/public/landingpage/index.html
+++ b/public/landingpage/index.html
@@ -557,9 +557,9 @@
 					>
 						<div class="team-box text-center">
 							<div class="team-thumb">
-								<a href="https://github.com/raylom"></a>
+								<a href="https://github.com/raylom">
 								<img src="https://avatars3.githubusercontent.com/u/35145470?s=460&v=4" alt="./img" />
-								</a></a>
+								</a>
 							</div>
 							<div class="team-content">
 								<h3>Ray Lomeli</h3>
