added target blank

--- a/public/landingpage/index.html
+++ b/public/landingpage/index.html
@@ -503,7 +503,7 @@
 					>
 						<div class="team-box text-center">
 							<div class="team-thumb">
-								<a href="https://github.com/MichaelNey">
+								<a href="https://github.com/MichaelNey" target="_blank">
 								<img src="https://avatars1.githubusercontent.com/u/25756024?s=460&v=4" alt="./img" />
 								</a>
 							</div>
@@ -521,7 +521,7 @@
 					>
 						<div class="team-box text-center">
 							<div class="team-thumb">
-								<a href="https://github.com/ajfrierson">
+								<a href="https://github.com/ajfrierson" target="_blank">
 								<img src="https://avatars3.githubusercontent.com/u/44757584?s=460&v=4" alt="./img" />
 								</a>
 							</div>
@@ -539,7 +539,7 @@
 					>
 						<div class="team-box text-center">
 							<div class="team-thumb">
-								<a href="https://github.com/Tulf">
+								<a href="https://github.com/Tulf" target="_blank">
 								<img src="https://avatars3.githubusercontent.com/u/6799924?s=460&v=4" alt="./img" />
 								</a>
 							</div>
@@ -557,7 +557,7 @@
 					>
 						<div class="team-box text-center">
 							<div class="team-thumb">
-								<a href="https://github.com/raylom">
+								<a href="https://github.com/raylom" target="_blank">
 								<img src="https://avatars3.githubusercontent.com/u/35145470?s=460&v=4" alt="./img" />
 								</a>
 							</div>
